@@ -14,6 +14,7 @@
   [#18903] ATmega644 register definitions for SPI and PRR (datasheet vs. 
            iom*.h)
   [#18915] PWM1X Bit missing for ATtiny261/461/861
+  [#19009] Make <util/delay.h> issue a warning when optimizations are turned off
   [#19050] gcrt1.S should call main rather than jumping to it
   [#19060] PCMSKx registers transposed in header for attinyX61
   [#19134] strcasecmp(): result	sign is not changed by swaping args
